Fix taking pictures when the pictures directories didn't exist

GStreamer would freak out big time.

BUG: 404456